# ring

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.en.md  README.md  ROADMAP.md  babel.cfg  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: contributing.en.md  contributing.md  guide.en.md  guide.md  index.en.md  index.md  session-states.en.md  session-states.md
scripts/: i18n_check.py
src/ring/: __init__.py  __main__.py  cli.py  config.py  focus.py  gc.py  hook.py  hook_protocol.py  i18n.py  ipc.py  labels.py  notify.py  notify_queue.py  osascript.py  payload_log.py  permission.py  plugins.py  question_detect.py  registry.py  sources.py  stats.py  transcript.py  tui.py  watcher.py
src/ring/commands/: __init__.py  _args.py  completion.py  digest.py  doctor.py  focus.py  gc.py  hook.py  quiet.py  stats.py
src/ring/focus/: __init__.py  applescript.py  base.py  iterm2.py  linux_wm.py  neovim.py  terminal.py  tmux.py
src/ring/locale/: ring.pot
src/ring/locale/en/LC_MESSAGES/: ring.mo  ring.po
src/ring/notify/: __init__.py  base.py  command.py  notify_send.py  ntfy.py  osascript_notifier.py  terminal_notifier.py  webhook.py
src/ring/sources/: __init__.py  base.py  claude_code.py  codex.py  hook_registry.py  local_llm.py
tests/: conftest.py  test_cli.py  test_config.py  test_discover.py  test_focus.py  test_gc.py  test_hook.py  test_i18n.py  test_i18n_quality.py  test_ipc.py  test_labels.py  test_local_llm.py  test_notify.py  test_notify_queue.py  test_payload_log.py  test_permission.py  test_plugins.py  test_question_detect.py  test_registry.py  test_render.py  test_sources.py  test_stats.py  test_tui.py  test_version.py  test_watcher.py
tests/fixtures/permission/: dialog-bash.txt  dialog-subagent.txt  iterm-after-reply.txt  iterm-dialog.txt  iterm-misfire.txt  no-dialog-after-reply.txt  no-dialog-misfire.txt
